# ohsu-glucose

./: .gitignore  README.md  analysis.py  controller.py  exercises.py  graphs.py  main.py  meals.py  parameters.py  patient.py  pyproject.toml  requirements.txt  utils.py
design/: controller.py  exercises.py  graphs.py  main.py  meals.py  metrics.py  parameters.py  patient.json  patient.py
offline/: graphs.py  main.py  meals.py  offline.py  parameters.py  patient.py  utils.py
offline/weights/: weights_sim_0.json  weights_sim_1.json  weights_sim_2.json  weights_sim_3.json  weights_sim_4.json
population/: plant.py  population.py  population_test.json
rl/: exercises.py  interpatient.py  main.py  meals.py  metrics.py  parameters.py  patient.py  plant.py  population_train.json  q_learning.py  utils.py
rl/q_tables/: q_table_0208b4d2_2025_07_11_13_10_02.json  q_table_0208b4d2_2025_07_11_14_06_27.json  q_table_0208b4d2_2025_07_11_15_02_18.json  q_table_0208b4d2_2025_07_11_15_58_36.json  q_table_0208b4d2_2025_07_11_16_54_44.json  q_table_0208b4d2_2025_07_11_17_50_47.json  q_table_0208b4d2_2025_07_11_20_11_04.json  q_table_0208b4d2_2025_07_11_22_31_58.json  q_table_0208b4d2_2025_07_12_00_51_59.json  q_table_0208b4d2_2025_07_12_03_12_13.json  q_table_bb0a24dc_2025_07_10_11_06_18.json  q_table_bb0a24dc_2025_07_10_12_03_28.json  q_table_bb0a24dc_2025_07_10_12_59_49.json  q_table_bb0a24dc_2025_07_10_13_56_37.json  q_table_bb0a24dc_2025_07_10_14_53_01.json  q_table_bb0a24dc_2025_07_10_15_49_39.json  q_table_c9a35a87_2025_06_11_18_08_50.json  (+4 more)
